# yast-backup

./: .cvsignore  .gitignore  README  README.md  RPMNAME  SUBDIRS  VERSION  ____README____  configure.in  configure.in.in  yast2-backup.spec.in  yast2-module-backup.spec.in
agents/: Makefile.am  ag_free_space
backup/: RPMNAME  yast2-backup.spec.in
backup/doc/: backup_features.txt  backup_specification.html
backup/package/: yast2-backup.changes
backup/scrconf/: Makefile.am  cfg_backup.scr
backup/src/: Backup.ycp  backup.desktop  backup_available_packages.ycp  functions.ycp  help_texts.ycp  ui.ycp
doc/: Makefile.am  YaST2-backup-mini-HOWTO.html  backup_features.txt  backup_specification.html  dialog1.ui  dialog10.ui  dialog11.ui  dialog2.ui  dialog3.ui  dialog4.ui  dialog5.ui  dialog6.ui  dialog8.ui  dialog9.ui  ui.tar.bz2  workflow.dia
doc/autodocs/: Makefile.am
package/: yast2-backup.changes  yast2-backup.spec  yast2-module-backup.changes
scrconf/: Makefile.am  cfg_backup.scr  cfg_backup_freespace.scr  proc_filesystems.scr
src/: .gitignore  Backup.ycp  Makefile.am  backup.desktop  backup.y2cc  backup.ycp  backup_available_packages.ycp  backup_get_packages.ycp  backup_save_profile.ycp  functions.ycp  help_texts.ycp  menuentry_backup.y2cc  menuentry_backup.ycp  ui.ycp
src/clients/: backup.rb  backup_available_packages.rb  backup_get_packages.rb  backup_get_packages.ycp  backup_save_profile.rb  backup_save_profile.ycp
src/desktop/: backup.desktop
src/include/backup/: functions.rb  functions.ycp  help_texts.rb  ui.rb  ui.ycp
src/modules/: Backup.rb
src/scrconf/: proc_filesystems.scr
src/scripts/: Makefile.am  backup_archive.pl  backup_cron  backup_search.pl
src/servers_non_y2/: ag_file_append
testsuite/tests/: AddId.out  AddId.rb  AddId.ycp  (+52 more)
(+17 files in other folders)
